<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/inicio"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_recordatorios"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/recordatorios"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_notification"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@+id/text_inicio" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_permisos"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/permisos"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_permissions"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/button_recordatorios" />

</androidx.constraintlayout.widget.ConstraintLayout>